--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./min-css/min-bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./min-css/min-style.css">
+	<link rel="stylesheet" type="text/css" href="min-style.css">
 	<link rel="stylesheet" type="text/css" href="./min-css/min-font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./min-css/min-et-line.css">
 	
