--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" type="text/css" href="./min-css/min-et-line.css">
 	
     
-	<script defer src="./js/jquery-2.1.0.js"></script>
-	<script defer src="./js/bootstrap.js"></script>
-	<script defer src="./js/blocs.js"></script>
-	<script defer src="./js/jquery.touchSwipe.js" defer></script>
-	<script defer src="./js/gmaps.js"></script>
+	<script defer src="./min-js/min-jquery-2.1.0.js"></script>
+	<script defer src="./min-js/min-bootstrap.js"></script>
+	<script defer src="./min-js/min-blocs.js"></script>
+	<script defer src="./min-js/min-jquery.touchSwipe.js" defer></script>
+	<script defer src="./min-js/min-gmaps.js"></script>
 
     <title>La Chouette agence</title>
 
