--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" type="text/css" href="./min-css/min-et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+	<script src="./min-js/min-jquery-2.1.0.js"></script>
+	<script src="./min-js/min-bootstrap.js"></script>
+	<script src="./min-js/min-blocs.js"></script>
+	<script src="./min-js/min-jqBootstrapValidation.js"></script>
+	<script src="./min-js/min-formHandler.js"></script>
     <title>Contact</title>
 
     
@@ -47,7 +47,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="page2.html">Contact&gt;</a>
 					</li>
 				</ul>
 			</div>
