--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 									<a href="#">Projets réalisés</a>
 								</li>
 								<li>
-									<a href="page2.html">Contact</a>
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -128,22 +128,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="#"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="#"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
