--- a/contact.html
+++ b/contact.html
@@ -122,9 +122,9 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<h3 class="text-center">
+							<p class="text-center">
 								La chouette agence - Agence web basée à Lyon.<br>
-							</h3>
+							</p>
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
